--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,7 @@
 <html>
-    <head><title>{{title}}</title></head>
+    <head>
+        <title>{{title}}</title></head>
+        <link rel="stylesheet" href="/static/style.css">
     <body>
          <h1>{{title}}</h1>
 
@@ -11,6 +13,12 @@
               <input type='submit'>
           </form>
 
+
+         <!--this is a comment-->
+
+         <div>
+            <img id="labrador" src="static/image-labrador.bmp" alt="a lab in the snow"/>
+         </div>
       <p>Things you like:</p>
          % if likes:
          <ul>
